syntax = "proto3";

package pb;

option go_package = "protos/gen/go";

service UserService {
  rpc CreateUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  string name = 1;
  string password = 2;
}

message UserResponse {
  int64 id = 1;
  string message = 2;
}

